fix: issue with header blurr in print

--- a/src/pages/cv/[...lang]/_components/header/style.scss
+++ b/src/pages/cv/[...lang]/_components/header/style.scss
@@ -13,9 +13,8 @@ header {
     line-height: 2.6rem;
     font-weight: 100;
 
-    strong {
-      font-weight: 600;
-      opacity: 0.9;
+    span {
+      font-weight: bold;
     }
   }
 
